feat: implementar tom de discagem e sensor de proximidade em chamadas
- Adicionado ToneGenerator para sinalizar quando o celular remoto está tocando.
- Implementado sensor de proximidade (WakeLock) exclusivo para chamadas de áudio.
- Sensor de proximidade desativa automaticamente ao ligar o viva-voz.
- Ajustada lógica de status: exibe "Ligando..." durante a conexão e "Chamando..." ao confirmar o toque.
- Garantido que a tela permaneça ligada (KeepScreenOn) durante chamadas de vídeo.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">Wappi</string>
+    <string name="app_name">Wappi Messenger</string>
     <string name="default_web_client_id">135221802523-fl381le8p7cf5agsshqtps78cal57427.apps.googleusercontent.com</string>
 
     <!-- Navigation & Tabs -->
